<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019.
  ~ AbdOo Saed
  ~ abdoo.dev@gmail.com
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".AddTodoAct">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ed_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/title"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/ed_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:hint="@string/content" />

        <Button
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_save"
            android:text="@string/save"
            android:textColor="#fff" />
    </LinearLayout>

</ScrollView>