<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Edit_ItemRecylerVActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAppearance="?android:textAppearanceMedium" />

            <EditText

                android:id="@+id/edt_title_upd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textAppearance="?android:textAppearanceMedium" />

            <EditText
                android:id="@+id/edt_note_upd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_delete_upd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="@drawable/btndesign"
                android:text="@string/delete"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white"
                android:onClick="btnDeleteOnClick"/>

            <Button
                android:id="@+id/btn_update_upd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:background="@drawable/btndesign"
                android:text="@string/update"
                android:onClick="btnUpdateOnClick"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@android:color/white" />
        </LinearLayout>


    </LinearLayout>


</ScrollView>